# AmnezichatIRCBridge

./: README.md
bridge/: Cargo.toml  Dockerfile
bridge/src/: bridge.rs  encryption.rs  main.rs  network_operations.rs
