[package]
name = "Amnezichat_IRC_Bridge"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
rand = "0.8.4"
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = "1.5"
base64 = "0.21"
hex = "0.4"
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }